# scitree

./: .flake8  .gitignore  CITATION.cff  DEVELOPMENT.md  README.md  pyproject.toml
example/: README.md
scitree/: __init__.py  __main__.py  styling.py  tree.py
tests/: test_scisort.py  test_scitree.py
